# palautus

./: .gitignore  README.md
osa2/nhl-statistics-1/nhl-statistics-1/src/: player_reader.py
osa2/nhl-statistics-1/nhl-statistics-1/src/tests/: test_statistics_service.py
osa2/poetry-web/: pyproject.toml
osa2/project-reader/project-reader/src/: project_reader.py
osa3/hello-docker/: .dockerignore  README.md  hello.py
osa3/login-robot/: README.md  log.html  output.xml  requirements.txt  tmp_input.txt
osa3/login-robot/results/: log.html  output.xml  report.html  single_log.html  single_output.xml  single_report.html
osa3/login-robot/src/: AppLibrary.py  index.py
osa3/login-robot/src/services/: user_service.py
osa3/login-robot/src/tests/: login.robot  register.robot  resource.robot
osa3/oma-kontti/: .dockerignore  .pylintrc  Dockerfile  pyproject.toml
osa3/oma-kontti/.github/workflows/: ci.yml
osa3/oma-kontti/flask-docker-app/: .dockerignore  Dockerfile  docker-compose.yml
osa3/oma-kontti/flask-docker-app/app/templates/: index.html
osa3/oma-kontti/flask-docker-app/tests/: test_basic.py
osa3/oma-kontti/src/: app.py  config.py  routes.py
