[tool.poetry]
name = "oma-kontti"
version = "0.1.0"
description = "A Flask web application for managing NHL statistics."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
robotframework = "^4.0"
requests = "^2.25"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pylint = "^2.7"
docker = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"